# solid-pod-lg-django

./: .gitignore  README.md  pyproject.toml  requirements.txt
solid_api_backend/: app.js  package-lock.json  package.json
solid_api_backend/routes/: admin.js  auth.js  resources.js  solid-pod-lg.js
src/: .env_template  manage.py
src/accounts/: urls.py  views.py
src/accounts/templates/accounts/: edit_profile.html  login.html  logout.html  register.html
src/connector/: apps.py  oidc.py  solid_api.py  urls.py  views.py
src/connector/templates/connector/: connect-api.html
src/connector/utillities/: folder.py  minis.py  snippets.py
src/pod_node/: apps.py  backend.py  urls.py  views.py
src/pod_node/templates/pod_node/: pod_node.html  test.html  view_resource.html
src/pod_registration/: apps.py  forms.py  models.py  urls.py  views.py
src/pod_registration/htmx-api/: urls.py  views.py
src/pod_registration/migrations/: 0001_initial.py  0002_solidpod_last_viewed.py
src/pod_registration/templates/pod_registration/: dashboard.html  view_resource.html
src/pod_session/: apps.py  urls.py  utilities.py  views.py
src/pod_session/templates/pod_session/: resource_form.html  resource_view.html  view_resource.html
src/solid-pod-lg/: asgi.py  settings.py  sitemaps.py  urls.py  views.py  wsgi.py
src/static/css/: style.css
src/static/js/: modal-form.js
src/templates/: about.html  base.html  footer.html  header.html  index.html  js.html  messages_display.html  navbar.html  pod_login_status.html  robots.txt
(+29 files in other folders)
