[project]
name = "solid-pod-lg-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.13.0",
    "asgiref>=3.11.1",
    "certifi>=2026.5.20",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.7",
    "crispy-bootstrap5>=2026.3",
    "cryptography>=48.0.0",
    "defusedxml>=0.7.1",
    "deprecated>=1.3.1",
    "django==5.2.*",
    "django-crispy-forms>=2.5",
    "django-redis>=6.0.0",
    "future>=1.0.0",
    "gunicorn>=26.0.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "hurry-filesize>=0.9",
    "isodate>=0.7.2",
    "jwcrypto>=1.5.7",
    "mako>=1.3.12",
    "markupsafe>=3.0.3",
    "mysqlclient>=2.2.8",
    "oic>=1.7.0",
    "packaging>=26.2",
    "pycparser>=3.0",
    "pycryptodomex>=3.23.0",
    "pydantic>=2.13.4",
    "pydantic-core>=2.46.4",
    "pydantic-settings>=2.14.1",
    "pyjwkest>=1.4.4",
    "pyparsing>=3.3.2",
    "python-dotenv>=1.2.2",
    "pytz==2023.3.post1",
    "rdflib>=7.6.0",
    "requests>=2.34.2",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "sqlparse>=0.5.5",
    "typing-extensions>=4.15.0",
    "urllib3>=2.7.0",
    "wrapt>=2.2.1",
]
